--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 regex == 2020.9.27
-sanic <= 9.12.3
-scikit-learn <= 0.24.0
-rasa == 2.0.2
+sanic < 19.12.3
+scikit-learn < 0.24.0
+requests ==2.25.1
+pyspellchecker ==0.6.2
