--- a/endpoints.yml
+++ b/endpoints.yml
@@ -12,6 +12,7 @@
 
 action_endpoint:
   url: "http://localhost:5055/webhook"
+  #url: "http://action-server:5055/webhook"
 
 # Tracker store which is used to store the conversations.
 # By default the conversations are stored in memory.
