updated the bot with slots availability

--- a/data/nlu.yml
+++ b/data/nlu.yml
@@ -11,6 +11,56 @@ nlu:
     - how many people are [fully](level) vaccinated in [India](country)
     - how many people are [partially](level) vaccinated in [India](country)
 
+- intent: vaccine_slot
+  examples: |
+    - how many slots are available in [Mumbai](district) 
+    - how many slots are available in [Ahmedabad Corporation](district)
+    - how many slots are available in [Amravati](district)
+    - slots available in [Pune](district)
+    - slots in [Aurangabad](district)
+    - slots available in [Kolhapur](district)
+    - how many slots are available in [Nagpur](district)
+    - how many slots are available in [Nanded](district)
+    - how many slots are available in [Nashik](district)
+    - slots in [Palghar](district)
+    - slots in [Raigad](district)
+    - slots in [Ratnagiri](district)
+    - slots in [Sangli](district)
+    - slots in [Solapur](district)
+    - slots in [Thane](district)
+    - slots in [Wardha](district)
+    - slots in [Alipurduar District](district)
+    - slots in [Bankura](district)
+    - how many slots are available in [Basirhat HD](district)
+    - how many slots are available in [Birbhum](district)
+    - how many slots are available in [Bishnupur HD](district)
+    - how many slots are available in [Cooch Behar](district)
+    - how many slots are available in [COOCHBEHAR](district)
+    - slots in [Dakshin Dinajpur](district)
+    - slots in [Darjeeling](district)
+    - slots in [Diamond Harbor HD](district)
+    - slots in [East Bardhaman](district)
+    - slots in [Hoogly](district)
+    - slots in [Howrah](district)
+    - slots in [Jalpaiguri](district)
+    - slots in [Jhargram](district)
+    - slots in [Kalimpong](district)
+    - slots in [Kolkata](district)
+    - slots in [Malda](district)
+    - slots in [Murshidabad](district)
+    - slots in [Nadia](district)
+    - slots in [Nandigram HD](district)
+    - slots in [North 24 Parganas](district)
+    - slots in [Paschim Medinipore](district)
+    - slots in [Purba Medinipore](district)
+    - slots in [Purulia](district)
+    - slots in [Rampurhat HD](district)
+    - slots in [South 24 Parganas](district)
+    - slots in [Uttar Dinajpur](district)
+    - slots in [West Bardhaman](district)
+    - slots are available in [Mumbai](district) [400066](pincode)
+    - slots available in [400066](pincode)
+
 - intent: covid_status
   examples: |
     - what is the total number of [confirmed](stage) cases in [india](country)
