--- a/values.yml
+++ b/values.yml
@@ -1,43 +1,63 @@
+debugMode: "true"
 # rasax specific settings
 rasax:
-    # initialUser is the user which is created upon the initial start of Rasa X
-    initialUser:
-        # password for the Rasa X user
-        password: "Password123"
-    # passwordSalt Rasa X uses to salt the user passwords
-    passwordSalt: "Password123"
-    # token Rasa X accepts as authentication token from other Rasa services
-    token: "Password123"
-    # jwtSecret which is used to sign the jwtTokens of the users
-    jwtSecret: "Password123"
-    tag: "0.38.1"
+  # initialUser is the user which is created upon the initial start of Rasa X
+  initialUser:
+    # password for the Rasa X user
+    password: "Password123"
+  # passwordSalt Rasa X uses to salt the user passwords
+  passwordSalt: "Password123"
+  # token Rasa X accepts as authentication token from other Rasa services
+  token: "Password123"
+  # jwtSecret which is used to sign the jwtTokens of the users
+  jwtSecret: "Password123"
+  tag: "0.42.0"
 # rasa: Settings common for all Rasa containers
 rasa:
-    # token Rasa accepts as authentication token from other Rasa services
-    token: "Password123"
-    name: "sumand/rasa-server"
-    # tag refers to the custom action server image tag
-    tag: "2.5.0"
+  # token Rasa accepts as authentication token from other Rasa services
+  token: "Password123"
+  name: "sumand/rasa-server"
+  # tag refers to the custom action server image tag
+  tag: "2.8.0"
 # RabbitMQ specific settings
 rabbitmq:
-    # rabbitmq settings of the subchart
-    rabbitmq:
-        # password which is used for the authentication
-        password: "Password123"
+  # rabbitmq settings of the subchart
+  rabbitmq:
+    # password which is used for the authentication
+    password: "Password123"
 # global settings of the used subcharts
 global:
-    # postgresql: global settings of the postgresql subchart
-    postgresql:
-        # postgresqlPassword is the password which is used when the postgresqlUsername equals "postgres"
-        postgresqlPassword: "Password123"
-    # redis: global settings of the redis subchart
-    redis:
-        # password to use in case there no external secret was provided
-        password: "Password123"
+  # postgresql: global settings of the postgresql subchart
+  postgresql:
+    # postgresqlPassword is the password which is used when the postgresqlUsername equals "postgres"
+    postgresqlPassword: "Password123"
+  # redis: global settings of the redis subchart
+  redis:
+    # password to use in case there no external secret was provided
+    password: "Password123"
 # app (custom action server) specific settings
 app:
-    # name of the custom action server image to use
-    name: "sumand/rasa-action-server"
-    # tag refers to the custom action server image tag
-    tag: "2.5.0"
- 
+  # name of the custom action server image to use
+  name: "sumand/rasa-action-server"
+  # tag refers to the custom action server image tag
+  tag: "2.8.0"
+  # additional volumeMounts to the main container
+  extraVolumeMounts:
+    - name: data-storage
+      mountPath: /app/charts
+
+  # additional volumes to the pod
+  extraVolumes:
+    - name: data-storage
+      hostPath:
+        # directory location on host
+        path: /Users/sumandas/Public/workspace/nlp/rasa/rasabot/charts
+# nginx specific settings
+nginx:
+  # enabled should be `true` if you want to use nginx
+  # if you set false, you will need to set up some other method of routing (VirtualService/Ingress controller)
+  enabled: true
+  # name of the nginx image to use
+  name: "rasa/nginx"
+  # tag refers to the nginx image tag (uses `appVersion` by default)
+  tag: "0.38.1"
